--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
     <meta name="google" content="notranslate" />
     <title class="notranslate">LINE</title>
     <script defer="defer" src="/static/js/main.js"></script>
-    <link href="/static/css/main.4a21c838.css" rel="stylesheet">
+    <link href="/static/css/main.4a21c838.css" rel="stylesheet" />
+    <link href="./line_logo_32x32_on.png" rel="icon" />
 </head>
 
 <body><noscript>You need to enable JavaScript to run this app.</noscript>
